--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2",
+    "bootstrap": "latest",
+    "ng2-bootstrap": "latest",
     "firebase": "latest",
     "angularfire2": "latest",
     "leaflet": "latest",
