--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^3.3.1",
     "minimatch": "^3.0.2",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "latest",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2",
     "bootstrap": "latest",
